fixed slideshow alignment

--- a/Clubs with SQL Database Module/my_app/static/Homepage.css
+++ b/Clubs with SQL Database Module/my_app/static/Homepage.css
@@ -65,10 +65,16 @@ body {
 } 
 
 .slideshow {
-    max-width: 700px;
-    max-height: 700px;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0 auto;
     position: relative;
-    left: 320px;
+    left: 270px;
+}
+
+.mySlides {
+    height: 600px;
+    width: 900px;
 }
 
 
